Fixed alignment of .navbar-burger
Removed redundant transform lines and margins (lines 136, 140). Fixed alignment in the parent div by making it a size of 16px with a left margin of -8px (lines 117, 122).

--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -114,12 +114,12 @@
     display: block
     height: 1px
     left: 50%
-    margin-left: -7px
+    margin-left: -8px
     position: absolute
     top: 50%
     transition: none $speed $easing
     transition-property: background, left, opacity, transform
-    width: 15px
+    width: 16px
     &:nth-child(1)
       margin-top: -6px
     &:nth-child(2)
@@ -133,15 +133,11 @@
     span
       background-color: $link
       &:nth-child(1)
-        margin-left: -5px
-        transform: rotate(45deg)
-        transform-origin: left top
+        transform: tranlateY(6px) rotate(45deg)
       &:nth-child(2)
         opacity: 0
       &:nth-child(3)
-        margin-left: -5px
-        transform: rotate(-45deg)
-        transform-origin: left bottom
+        transform: translateY(-4px) rotate(-45deg)
 
 =loader
   animation: spinAround 500ms infinite linear
